<resources>
    <string name="app_name">Home Schedule</string>
    <string name="password">password</string>
    <string name="forgot">Forgot ?</string>
    <string name="confirmYourPassword">confirm password</string>
    <string name="createAccount">Create account</string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="email">email</string>
    <string name="homeSchedu">homeSchedu</string>
    <string name="forgotYourPassword">Forgot Password?</string>
    <string name="toResetYourPassword">To reset your password enter the email address you use to sign in</string>
    <string name="signIn">Sign In</string>
    <string name="resendEmail">Resend Email</string>
    <string name="submit">Submit</string>
    <string name="backToLogin">Back to login</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="logIn">Log in</string>
    <string name="desc">Desc</string>
    <string name="thisAccountDoesNotExist">This account does not exist</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="loginFailed">Login Failed</string>
    <string name="enterYourEmailAndPassword">Please enter your email and password</string>
    <string name="signInSuccessfully">Sign in successfully</string>
    <string name="enterYourEmail">Please enter your email</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="unknownError">Unknown error </string>
    <string name="enterYourFirstName">Please enter your first name</string>
    <string name="enterYourHouseName">Please enter your house name</string>
    <string name="enterPassword">Please enter your password</string>
    <string name="passwordDoesNotMatch">Password does not match</string>
    <string name="userCreatedSuccessfully"> User created successfully</string>
    <string name="accountAlreadyExist">This account already exist</string>
    <string name="passwordMustHave">Password must have at least 6 characters</string>
    <string name="scheduleTime">Create a Schedule Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="createSchedule">Create Schedule</string>
    <string name="signOut">Sign out</string>
    <string name="userName">User Name</string>
    <string name="date">Date</string>
    <string name="time">time</string>
    <string name="fullName">full name</string>
    <string name="houseName">house name</string>
    <string name="mainScreen">Main Screen</string>
    <string name="available">Available</string>
    <string name="photo">Photo</string>
    <string name="mySchedules">My Schedules </string>
    <string name="housemates">Housemates</string>
    <string name="profile">Profile</string>
    <string name="selectPhoto">SELECT PHOTO</string>
    <string name="resetPassword">Reset Password</string>
    <string name="updateProfile">Update Profile</string>
    <string name="address">address</string>
    <string name="eirCode">eircode</string>
    <string name="eirCodeEg">eircode e.g: D01F5P2</string>
    <string name="street">street</string>
    <string name="number">number</string>
    <string name="zipCodeEg">zip code e.g: Dublin 1</string>
    <string name="zipCode">zip code</string>
    <string name="createHouse">Create a House</string>
    <string name="enterAllFields">Please, enter all fields</string>
    <string name="addUser">Add User</string>
    <string name="saveAndContinue">Save and Continue</string>
    <string name="addHousemate">Add Your Housemates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="thankYouForUsing">for using our services</string>
    <string name="scheduleInformation">Schedule Information</string>
    <string name="confirm">Confirm</string>
    <string name="history">History</string>
    <string name="enterExistingHouse">Enter existing house</string>
    <string name="toInviteAHousemate">to invite a housemate, share your </string>
    <string name="houseId">house ID</string>
    <string name="yourHouseId">house ID: </string>
    <string name="toEnterInAExistingHouse">To enter into an existing house, please input the house ID</string>
    <string name="createNewHouse">Create a new house</string>
    <string name="itemName">item name</string>
    <string name="circlePhoto">circle photo</string>
    <string name="RecentHouseSchedules">Recent house schedules</string>
    <string name="SchedulesOfTheDay">Schedules of the day</string>
    <string name="scheduleDetails">Confirming your Schedule</string>
    <string name="resendVerificationCode">Resend verification code</string>
    <string name="nothingToDisplay">nothing to display</string>
    <string name="placeName">place name</string>
    <string name="placeLocation">Place Location</string>
    <string name="information">information</string>
    <string name="logo">logo</string>
    <string name="placeLocal">place local</string>
    <string name="userProfile">user profile</string>
    <string name="backHome">back home</string>
    <string name="delete">Delete</string>
    <string name="changePhoto">CHANGE PHOTO</string>
    <string name="closeAccount">Close Account</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="deleteAccount">Deleting this will result in completely removing your account from the system and you will not be able to access the app.</string>
    <string name="thankYou">Thank you !</string>


</resources>
