<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_my_schedules"
            android:icon="@drawable/ic_schedule"
            android:title="@string/mySchedules"/>
        <item
            android:id="@+id/nav_housemates"
            android:icon="@drawable/ic_people"
            android:title="@string/housemates"/>
    </group>


    <item android:title="@string/AccountSettings">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_edit"
                android:title="@string/updateProfile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/signOut"/>

            <item
                android:id="@+id/nav_close_account"
                android:icon="@drawable/ic_close"
                android:title="@string/closeAccount"/>
        </menu>
    </item>
</menu>