<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".Activity.ResetPasswordActivity">

    <ImageView
        android:id="@+id/iv_reset_password"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_icon" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground"
        android:textColor="@color/textColor"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:text="@string/forgotYourPassword"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_reset_password" />

    <TextView
        android:id="@+id/tv_to_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:textColor="@android:color/secondary_text_dark"
        android:text="@string/toResetYourPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <EditText
        android:id="@+id/et_reset_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_reset_password"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_reset_submit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:background="@drawable/rounded_button"
        android:text="@string/resetPassword"
        android:textColor="@color/textButton"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reset_email"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/tv_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/resendEmail"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/tv_back_to_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_submit"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_left_arrow"
        android:text="@string/backToLogin"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_submit"
        app:layout_constraintVertical_bias="0.136" />

</androidx.constraintlayout.widget.ConstraintLayout>