<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:layout_gravity="center"
    tools:context=".Activity.MainActivity">


    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@drawable/logo_icon" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="@dimen/tv_bottom_width"
        android:layout_height="@dimen/tv_bottom_height"
        android:layout_marginStart="90dp"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/drawablePaddingLeft"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.052"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="@dimen/tv_bottom_width"
        android:layout_height="@dimen/tv_bottom_height"
        android:layout_marginEnd="88dp"
        android:text="@string/createAccount"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:background="@drawable/rounded_button"
        android:text="@string/signIn"
        android:textColor="@color/textButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.161" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_resend_verification_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/tvSideMargin"
        android:layout_marginEnd="@dimen/tvSideMargin"
        android:background="@drawable/rounded_button"
        android:text="@string/resendVerificationCode"
        android:visibility="gone"
        android:textColor="@color/textButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.161" />


</androidx.constraintlayout.widget.ConstraintLayout>