<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_schedule_circle_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_my_schedule_user_photo"
            app:layout_constraintEnd_toEndOf="@+id/iv_my_schedule_user_photo"
            app:layout_constraintStart_toStartOf="@+id/iv_my_schedule_user_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_my_schedule_user_photo" />

        <ImageView
            android:id="@+id/iv_my_schedule_user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="1dp"
            android:contentDescription="@string/photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_my_schedule_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/firstName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_my_schedule_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/lastName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toEndOf="@+id/tv_my_schedule_first_name"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_my_schedule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="3dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_schedule_first_name" />


        <TextView
            android:id="@+id/tv_my_schedule_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:drawableStart="@drawable/ic_item_name"
            android:drawablePadding="3dp"
            android:text="@string/itemName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_schedule_time" />

        <TextView
            android:id="@+id/tv_my_schedule_place_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="3dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_schedule_item_name" />

        <TextView
            android:id="@+id/tv_my_schedule_place_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:drawableStart="@drawable/ic_info"
            android:drawablePadding="3dp"
            android:text="@string/information"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_schedule_place_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>